k8s/pyapi-deployment.yml
apiVersion: v1
kind: Service
metadata:
    name: pyapi
    labels:
        service: pyapi
        env: dev
spec:
    selector:
        app: pyapi
    ports:
    - port: 5000
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pyapi 
    labels:
        env: dev
spec:
    selector:
        matchLabels:
            app: pyapi
    replicas: 3
    template:
        metadata:
            labels:
                app: pyapi
        spec:
            containers:
            - name: pyapi
              image: sktrinh12/romiq-ctnr:latest
              volumeMounts:
                  - name: shared-drive
                    mountPath: /mnt/common_drive/reports
              imagePullPolicy: Always
            restartPolicy: Always
            volumes:
                - name: shared-drive
                  hostPath:
                      path: /mnt/common_drive/reports
