k8s/rshiny-deployment.yml
apiVersion: v1
kind: Service
metadata:
    name: rshiny
    labels:
        service: rshiny
spec:
    selector:
        app: rshiny
    ports:
        - port: 3838
          targetPort: 3838

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rshiny
    labels:
        name: rshiny
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rshiny
    template:
        metadata:
            labels:
                app: rshiny
        spec:
            containers:
                - name: rshiny
                  image: sktrinh12/shinyapp-ctnr:latest
                  volumeMounts:
                      - mountPath: /mnt/common_drive/reports
                        name: shared-drive
                  imagePullPolicy: Always
            restartPolicy: Always
            volumes:
                - name: shared-drive
                  hostPath:
                      path: /mnt/common_drive/reports
