k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: minikube-ingress 
    labels:
        env: dev
    annotations:
spec:
    tls:
        - secretName: dev-meta-app-tls
          hosts:
              - dev.meta-app.com
    rules:
    - host: dev.meta-app.com
      http:
          paths:
          - path: /
            backend:
              serviceName: rshiny
              servicePort: 3838
          - path: /pyapi
            backend:
                serviceName: pyapi
                servicePort: 5000
